<resources>
    <string name="app_name">Songs and Hymns of Life</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="content_description">content</string>
    <string name="play_music">play/pause</string>
    <string name="loop_music">loop</string>
    <string name="search">search</string>
    <string name="search_hint">Please search for title</string>
    <string name="previous_song">previous song</string>
    <string name="next_song">next_song</string>
    <string name="search_title">search title</string>
    <string name="numbers">NUMBERS</string>
    <string name="category">CATEGORY</string>
    <string name="list">LIST</string>
    <string name="favourite">favourite</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="enter_track_number">Please enter track number</string>
    <string name="long_digits_warning">Please enter a number between 1 and 586</string>
    <string name="network_error">Please check your Internet connection</string>
    <string name="number_error">Track number doesn\'t start with 0</string>
    <string name="clear">CLEAR</string>
    <string name="open_settings">Settings</string>
    <string name="end_of_list">This is the end of the list</string>
    <string name="beginning_of_list">This is the beginning of the list</string>
    <string name="search_result_not_found">Sorry, &lt;b>%1$s&lt;/b> doe not match any songs</string>
    <string-array name="tabs">
        <item>List</item>
        <item>Number</item>
    </string-array>
    <plurals name="frequency_number">
        <item quantity="one">This song has been played once</item>
        <item quantity="two">This song has been played twice</item>
        <item quantity="other">This song has been played %1$d times</item>
    </plurals>
</resources>